--- a/style.css
+++ b/style.css
@@ -60,3 +60,9 @@ div.jumbotron{
 .jumbotron h1{
   font-size: 60px;
 }
+
+.jumbotron p{
+  font-size: 20px;
+  padding: 0 0 0 0;
+  line-height: 40px;
+}
